--- a/src/TwentyFortyEight.Maui/Components/GameOverModal.xaml
+++ b/src/TwentyFortyEight.Maui/Components/GameOverModal.xaml
@@ -2,7 +2,9 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:strings="clr-namespace:TwentyFortyEight.Maui.Resources.Strings"
+             xmlns:local="clr-namespace:TwentyFortyEight.Maui.Components"
              x:Class="TwentyFortyEight.Maui.Components.GameOverModal"
+             x:DataType="local:GameOverModal"
              x:Name="this">
 
     <Grid IsVisible="{Binding IsVisible, Source={x:Reference this}}"
