--- a/src/TwentyFortyEight.Maui/Components/GameOverModal.xaml
+++ b/src/TwentyFortyEight.Maui/Components/GameOverModal.xaml
@@ -62,15 +62,7 @@
                     Padding="30,0"
                     CornerRadius="8"
                     Margin="0,10,0,0"
-                    ContentLayout="Left, 10"
-                    SemanticProperties.Description="{x:Static strings:AppStrings.TryAgain}">
-                    <Button.ImageSource>
-                        <FontImageSource 
-                            Glyph="↻" 
-                            Size="20" 
-                            Color="White" />
-                    </Button.ImageSource>
-                </Button>
+                    SemanticProperties.Description="{x:Static strings:AppStrings.TryAgain}" />
                 
             </VerticalStackLayout>
         </Border>
