--- a/src/TwentyFortyEight.Maui/SettingsPage.xaml
+++ b/src/TwentyFortyEight.Maui/SettingsPage.xaml
@@ -37,6 +37,7 @@
                      TextColor="{AppThemeBinding Light#776e65, Dark=#f9f6f2}"
                      VerticalOptions="Center" />
                   <Switch x:Name="AnimationsEnabledSwitch"
+                     AutomationId="AnimationsEnabledSwitch"
                      Grid.Column="1"
                      IsToggled="{Binding AnimationsEnabled}"
                      OnColor="{AppThemeBinding Light=#8f7a66, Dark=#5a4a3a}"
@@ -61,6 +62,7 @@
                         TextColor="{AppThemeBinding Light=#776e65, Dark=#cdc1b4}"
                         VerticalOptions="Center" />
                      <Slider
+                        AutomationId="AnimationSpeedSlider"
                         Grid.Column="1"
                         Value="{Binding AnimationSpeed}"
                         Minimum="0.5"
@@ -115,6 +117,7 @@
                      TextColor="{AppThemeBinding Light#776e65, Dark=#f9f6f2}"
                      VerticalOptions="Center" />
                   <Switch x:Name="HapticsEnabledSwitch"
+                     AutomationId="HapticsEnabledSwitch"
                      Grid.Column="1"
                      IsToggled="{Binding HapticsEnabled}"
                      OnColor="{AppThemeBinding Light=#8f7a66, Dark=#5a4a3a}"
